--- a/mystyle.css
+++ b/mystyle.css
@@ -1,15 +1,14 @@
 body{
- background-color: darkgray;
+    background-color: yellow;
 }
-h2 {            
-    font-size:  49px;
-    color: red;
-    background-color: aqua
+h2 {
+    font-size: 49px;
+    color: purple;
 }
 #main_wrapper{
     width: 900px;
     margin: auto;
 }
 .red_button{
-    color: blue
+    color:pink;
 }
