--- a/mystyle.css
+++ b/mystyle.css
@@ -12,3 +12,19 @@ h2 {
 .red_button{
     color:pink;
 }
+div>ul>i:nth-child(odd){
+    color: brown
+} 
+div>ul>li:last-child{
+    color: orange;
+    font-size: 59px;
+}
+div[name="helolo"]{
+    width: 200px;
+    margin: 20px;
+    padding:10px;
+    border: 1px solid #000000;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
