--- a/mystyle.css
+++ b/mystyle.css
@@ -13,3 +13,24 @@ h2 {
 .red_button{
     color: blue
 }
+div[name]{
+     color: green;
+}
+div>ul>li:nth-child(odd){
+    color: brown
+}
+div#last_div>ul>li:last-child{
+    color: orange;
+    font-size: 59px;
+}
+div[name="helolo"]{
+    width: 200px;
+    margin: 20px;
+    padding: 10px;
+    font: italic;
+  font-size: 19px;
+    border: 2px solid #000000;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
